Ajout de l'option Favoris

--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
   </div>
   <div id="streams"></div>
   <footer>
-    <span>VirusDEV &copy; 2025 — Simple, animé, et pratique pour suivre tes streamers favoris !</span>
+    <span>VirusDEV &copy; 2025 — Simpleee, animé, et pratique pour suivre tes streamers favoris !</span>
   </footer>
   <script>
     const parent = location.hostname;
