Modification du Systéme de Favoris

--- a/index.html
+++ b/index.html
@@ -315,8 +315,8 @@
     .stream-player {
       width: 100%;
       aspect-ratio: 16/9;
-      min-height: 380px;
-      max-height: 70vh;
+      min-height: 490px; /* Augmenté depuis 380px */
+      max-height: 95vh;  /* Augmenté depuis 70vh */
       border: none;
       border-radius: 18px;
       margin-bottom: 0.5rem;
