Modification du Systéme de Favoris , Agrandissement des écran , ajout d'un logo dans la page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Virus MultiTwitch</title>
+  <link rel="icon" type="image/png" href="https://media.discordapp.net/attachments/1337703084415254590/1381755603310870571/twitch-icon-32x32-29.png?ex=6848abaf&is=68475a2f&hm=533774fb8267b346c392793621ba92786b48018d11ca3ca30eebc8f9dadca921&=&format=webp&quality=lossless&width=640&height=640">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
