Modification du Systéme de Favoris , Agrandissement des écran , ajout d'un logo dans la page

--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
   </div>
   <div id="streams"></div>
   <footer>
-    <span><i class="fa-solid fa-heart" style="color:#ff4b5c;"></i> VirusDEV &copy; 2025 — Simpleee, animé, et pratique pour suivre tes streamers favoris !</span>
+    <span><i class="fa-solid fa-heart" style="color:#ff4b5c;"></i> VirusDEV &copy; 2025 — 💬 Petite création en mode chill pour régaler tout le monde 💬 !</span>
   </footer>
   <div id="feedbackMsg" class="feedback-msg"></div>
   <script>
